# Mathos-Public

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.kernel  LICENSE  PROYECTO.md  README.md  api-contract.yaml  docker-compose.yml  mathos-install-wsl.sh  mathos.sh  presentacion_linkedin.md  pyproject.toml  slides.md
backend/api/: __init__.py  main.py  models.py  requirements.txt  schemas.py  seed.py  seed_esp32.py  seed_filosofia.py  seed_temarios.py
backend/api/middleware/: auth.py
backend/api/routes/: __init__.py  agenda.py  asistente.py  audio.py  auth.py  biblios.py  cerebro.py  feynman_trainer.py  geo.py  glosario.py  infografias.py  libros.py  materias.py  sandbox_sql.py  simulacro.py  srs.py  taller.py  temas.py  vision.py
backend/api/services/: asistente_service.py  dominio_service.py  embeddings.py  feynman_trainer.py  graph_service.py  infografia_service.py  notebooklm_service.py  sandbox_sql_service.py  simulacro_service.py  srs_service.py  (+2 more)
backend/kernel/: CMakeLists.txt  build.sh  requirements.txt
backend/kernel/include/: sandbox.h
backend/kernel/scripts/: check_syntax.sh  install_drogon.sh
backend/kernel/src/: main.cpp  sandbox.cpp
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  test_sync.js  vite.config.ts
frontend/scripts/: redesign_geomathos.py
frontend/src/: App.tsx  index.css  main.tsx
ia/graph/: processed_ids.json
ia/scripts/: build_graph.py  indexar_filosofia.py  indexar_filosofia_nuevos.py  indexar_materias.py
infra/: docker-compose.yml
infra/docker/: api.Dockerfile
(+59 files in other folders)
